--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 clap = {version= "4.4.8", features= ["cargo"]}
 dotenv = "0.15.0"
+dyn-clone = "1.0.16"
 env_logger = "0.10.1"
 log = "0.4.20"
