--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dotenv = "0.15.0"
 dyn-clone = "1.0.16"
 env_logger = "0.10.1"
 log = "0.4.20"
+nom = "7.1.3"
 
 [dev-dependencies]
 ctor = "0.2.5"
