--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dyn-clone = "1.0.16"
 env_logger = "0.10.1"
 log = "0.4.20"
 nom = "7.1.3"
+nom-7-precedence = { git = "https://github.com/mullr/nom-7-precedence" }
 
 [dev-dependencies]
 ctor = "0.2.5"
