--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.10.1"
 log = "0.4.20"
 nom = "7.1.3"
 nom-7-precedence = { git = "https://github.com/mullr/nom-7-precedence" }
+nom-supreme = "0.8.0"
 
 [dev-dependencies]
 ctor = "0.2.5"
